Add request model & controllers
